--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>        
         <meta charset="UTF-8">
-        <link rel="stylesheet" href="estilos.css">
+        <link rel="stylesheet" href="./css/estilos.css">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Inicio</title>
